Added implementation for reading IoTHub events and persisting to a database

--- a/event-grid-webhook/Dockerfile
+++ b/event-grid-webhook/Dockerfile
@@ -4,16 +4,10 @@ EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/core/sdk:3.0-buster AS build
 WORKDIR /src
-COPY ["event-grid-webhook/EventGridWebhook.csproj", "EventGridWebhook/"]
-RUN dotnet restore "event-grid-webhook/EventGridWebhook.csproj"
 COPY . .
-WORKDIR "/src/EventGridWebhook"
-RUN dotnet build "EventGridWebhook.csproj" -c Release -o /app/build
-
-FROM build AS publish
-RUN dotnet publish "EventGridWebhook.csproj" -c Release -o /app/publish
+RUN dotnet publish "event-grid-webhook/EventGridWebhook.csproj" -c Release -o /app/publish
 
 FROM base AS final
 WORKDIR /app
-COPY --from=publish /app/publish .
+COPY --from=build /app/publish .
 ENTRYPOINT ["dotnet", "EventGridWebhook.dll"]
