--- a/event-grid-webhook/appsettings.json
+++ b/event-grid-webhook/appsettings.json
@@ -6,5 +6,7 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Vault-ClientId": "87b0d4ee-e764-43d6-88c5-90fa1cd51e94",
+  "Vault": "https://cisien-iot-vault.vault.azure.net/"
 }
